# prod3

prod/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
prod/mysite/mysite/: settings.py  urls.py
