[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "Monge-Bayyr",email = "ojdupool2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "django-filter (>=25.1,<26.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pytz (>=2025.2,<2026.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

